# velk

./: .gitignore  CMakeLists.txt  README.md  common.h  main.cpp
.github/workflows/: ci.yml  codeql.yml  docs.yml  test.yml
api/: any.h  function.h  property.h
benchmark/: CMakeLists.txt  main.cpp
demo/: CMakeLists.txt  main.cpp
doc/: Doxyfile  architecture.md  memory-layout.md  strata-interface.md
docs/: Doxyfile  advanced.md  architecture.md  c_api.md  guide.md  hive.md  performance.md  plugins.md  strata-interface.md  velk-interface.md
docs/plugins/: animator.md
ext/: any.h  event.h  object.h
interface/: intf_any.h  intf_event.h  intf_external_any.h  intf_function.h  intf_interface.h  intf_metadata.h  intf_object.h  intf_object_factory.h  intf_property.h  intf_registry.h  types.h
ltk/: CMakeLists.txt  common.h
ltk/api/: any.h  function.h  ltk.h  property.h
ltk/ext/: any.h  event.h  meta_object.h  metadata.h  object.h
ltk/interface/: intf_any.h  intf_event.h  intf_external_any.h  intf_function.h  intf_interface.h  intf_metadata.h  intf_object.h  intf_object_factory.h  intf_property.h  intf_registry.h  refcnt_ptr.h  types.h
ltk/src/: function.h  metadata_container.cpp  metadata_container.h  plugin.cpp  property.cpp  property.h  registry.cpp  registry.h
src/: event.h  function.cpp  function.h  property.cpp  property.h  registry.cpp  registry.h
strata/: CMakeLists.txt  array_view.h
strata/api/: any.h  function.h  property.h  strata.h
strata/ext/: event.h  meta_object.h  object.h
strata/include/: array_view.h  common.h  uid.h
strata/include/api/: any.h  callback.h  event.h  function.h  function_context.h  future.h  property.h  strata.h  traits.h
strata/include/ext/: any.h  core_object.h  event.h  interface_dispatch.h  metadata.h  object.h  refcounted_dispatch.h
strata/include/interface/: intf_any.h  intf_event.h  intf_external_any.h  intf_function.h  intf_future.h  intf_interface.h  intf_metadata.h  intf_object.h  intf_object_factory.h  intf_property.h  intf_strata.h  types.h
strata/interface/: intf_any.h  intf_event.h  intf_function.h  intf_interface.h  intf_metadata.h  intf_object.h  intf_object_factory.h  intf_property.h  intf_registry.h  types.h
strata/src/: event.cpp  event.h  function.cpp  function.h  future.cpp  future.h  metadata_container.cpp  metadata_container.h  plugin.cpp  property.cpp  property.h  registry.h  strata_export.h  strata_impl.cpp  strata_impl.h
test/: CMakeLists.txt  main.cpp  test_animation.cpp  test_any.cpp  test_array_property.cpp  test_c_api.cpp  test_container.cpp  test_function.cpp  test_future.cpp  test_hierarchy.cpp  test_hive.cpp  test_log.cpp  test_node.cpp  test_object.cpp  test_plugin.cpp  test_property.cpp  test_shared_ptr.cpp  test_string_view.cpp  test_uid.cpp
test/test_plugin_dll/: CMakeLists.txt  test_plugin_dll.cpp
velk/: CMakeLists.txt
velk/c_api/: CMakeLists.txt
velk/c_api/include/: velk_c.h
velk/c_api/src/: velk_c.cpp
velk/include/: array_view.h  common.h  memory.h  string_view.h  uid.h
velk/include/api/: any.h  callback.h  event.h  function.h  function_context.h  future.h  property.h  traits.h  velk.h
velk/include/ext/: any.h  core_object.h  event.h  interface_dispatch.h  metadata.h  object.h  refcounted_dispatch.h
velk/include/interface/: intf_any.h  intf_event.h  intf_external_any.h  intf_function.h  intf_future.h  intf_interface.h  intf_metadata.h  intf_object.h  intf_object_factory.h  intf_property.h  intf_velk.h  refcnt_ptr.h  types.h
velk/include/velk/: array_view.h  common.h  memory.h  string.h  string_view.h  uid.h  vector.h  velk_export.h  version.h.in
velk/include/velk/api/: any.h  attachment.h  callback.h  container.h  event.h  function.h  function_context.h  future.h  hierarchy.h  node.h  object.h  property.h  state.h  traits.h  velk.h
velk/include/velk/api/hive/: hive.h  iterate.h  object_hive.h  raw_hive.h
velk/include/velk/ext/: any.h  any_extension.h  core_object.h  event.h  interface_dispatch.h  member_traits.h  metadata.h  node.h  object.h  plugin.h  refcounted_dispatch.h
velk/include/velk/interface/: intf_any.h  intf_any_extension.h  intf_array_any.h  intf_array_property.h  intf_container.h  intf_event.h  intf_external_any.h  intf_function.h  intf_future.h  intf_hierarchy.h  intf_interface.h  intf_log.h  intf_metadata.h  intf_node.h  intf_object.h  intf_object_factory.h  intf_object_storage.h  intf_plugin.h  intf_plugin_registry.h  intf_property.h  intf_type_registry.h  intf_velk.h  member_desc.h  refcnt_ptr.h  types.h
velk/include/velk/interface/hive/: intf_hive.h  intf_hive_registry.h  intf_hive_store.h
velk/plugins/animator/: CMakeLists.txt
velk/plugins/animator/include/velk/plugins/animator/: animator.h  easing.h  interpolator_traits.h  lerp_traits.h  plugin.h  transition.h
velk/plugins/animator/include/velk/plugins/animator/api/: animation.h  animator.h  transition.h
velk/plugins/animator/include/velk/plugins/animator/interface/: intf_animated_any.h  intf_animation.h  intf_animator.h  intf_animator_plugin.h  intf_transition.h
velk/plugins/animator/src/: animated_any.cpp  animated_any.h  animation.cpp  animation.h  animator.cpp  animator.h  animator_plugin.cpp  animator_plugin.h  transition.cpp  transition.h
velk/src/: array_property.cpp  array_property.h  container.cpp  container.h  event.cpp  event.h  function.cpp  function.h  future.cpp  future.h  hierarchy.cpp  hierarchy.h  library_handle.h  metadata_container.cpp  metadata_container.h  node.h  object_storage.cpp  object_storage.h  platform.h  plugin_registry.cpp  plugin_registry.h  property.cpp  property.h  type_registry.cpp  type_registry.h  velk.cpp  velk_export.h  velk_impl.cpp  velk_impl.h  velk_instance.cpp  velk_instance.h
velk/src/hive/: hive.h  hive_store.cpp  hive_store.h  object_hive.cpp  object_hive.h  page_allocator.h  raw_hive.cpp  raw_hive.h
velk/src/plugins/hive/: hive.cpp  hive.h  hive_plugin.cpp  hive_plugin.h  hive_registry.cpp  hive_registry.h
